tests/negative/division_by_zero.mm
atom unsafe_div(a: i64, b: i64)
    requires: true;
    ensures: true;
    body: { a / b }
